--- a/comparaImagenes/package.json
+++ b/comparaImagenes/package.json
@@ -23,6 +23,7 @@
     "image-hash": "^5.3.1",
     "rxjs": "~7.8.0",
     "spark-md5": "^3.0.2",
+    "tesseract.js": "^3.0.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
@@ -32,6 +33,7 @@
     "@angular/compiler-cli": "^15.2.0",
     "@types/crypto-js": "^4.1.1",
     "@types/jasmine": "~4.3.0",
+    "@types/node": "^18.16.18",
     "@types/spark-md5": "^3.0.2",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
